--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.16.3",
+    "express3-handlebars": "^0.5.2",
     "morgan": "^1.9.0"
   }
 }
