--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "bid for items through this app",
   "main": "server.js",
   "scripts": {
-    "start": "node --harmony server.js"
+    "start": "node --harmony app.js"
   },
   "repository": {
     "type": "git",
@@ -20,8 +20,12 @@
   "author": "John Afolayan <hughj32001@gmail.com> (softdemos.000webhostapp.com)",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.18.3",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.3",
     "express": "^4.16.3",
-    "express3-handlebars": "^0.5.2",
+    "express-hbs": "^1.0.4",
+    "express-session": "^1.15.6",
     "morgan": "^1.9.0"
   }
 }
